--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
+    bottle
 
 
 [options.packages.find]
@@ -74,6 +75,8 @@ testing =
 # For example:
 # console_scripts =
 #     fibonacci = webshopk8s_monolith.skeleton:run
+console_scripts =
+    monolith_web = webshopk8s_monolith.web:start_web
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
